# YaleHacks

./: .env.example  .gitignore  README.md  pyproject.toml  verify_brightdata.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  BackgroundClothes.tsx  WardrobeReport.tsx  api.ts  index.css
src/yalehacks/: __main__.py  api.py  brightdata_client.py  cli.py  config.py  db.py  graph.py  query_build.py  tag_read.py  wardrobe_impact.py
